<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:background="@drawable/smile2"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" >

    <TextView
        app:layout_constraintVertical_weight="1"
        android:id="@+id/guess_bald"
        android:text="@string/guess_bald"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/guess_bald2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36dp"
        android:background="@color/black"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/guess_bald2"
        app:layout_constraintVertical_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/guess_bald2"
        app:layout_constraintBottom_toTopOf="@id/mister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guess_bald"
        android:textSize="25dp"
        android:background="@color/black"

        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <ImageView
        android:id="@+id/mister"
        android:layout_width="match_parent"
        app:layout_constraintVertical_weight="6"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_understand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guess_bald2"
        android:layout_gravity="bottom"
        android:src="@drawable/pep77"/>


    <Button
        android:id="@+id/button_understand"
        android:text="@string/button_understand2"
        app:layout_constraintTop_toBottomOf="@id/mister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/button_understand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>





</androidx.constraintlayout.widget.ConstraintLayout>