<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/smile2"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"

        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_weight="2"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_width="match_parent" />

    <LinearLayout

        android:orientation="vertical"
        android:id="@+id/ll"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/questionName"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/clock"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llbig"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll1"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/left"
                android:text="@string/left"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/leftValue"
                android:text="10"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/right"
                    android:text="@string/right"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/rightValue"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll3"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/wrong"
                    android:text="@string/wrong"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/wrongValue"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



